--- a/src/components/Veranstaltungen/TermineItem.astro
+++ b/src/components/Veranstaltungen/TermineItem.astro
@@ -6,7 +6,7 @@ interface Props {
     end?: boolean;
 }
 
-const { date, titel, description = "", classes, end = false } = Astro.props;
+const { date, titel, description = "", end = false } = Astro.props;
 ---
 
 <li>
