--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -61,7 +61,7 @@ const {
 		<meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 		<!--Nav Script -->
-		<script src="../js/nav.js"></script>
+		<!-- <script src="../js/nav.js"></script> -->
 
 		<ClientRouter />
 	</head>
@@ -73,7 +73,6 @@ const {
 						<NavigationBar />
 					</div>
 				</header>
-				<div class="top_div dontPrint"></div>
 				<main id="swup">
 					<div class="slot transition-fade content-grid">
 						<slot />
