--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,11 +19,11 @@ import Countdown from "components/Countdown.astro";
         label="Vereinsmitglied werden"
         classes="transition-fade primary"
       />
-      <Verlinkung
+      <!-- <Verlinkung
         href="/zeiten"
         label="Saisonverlängerung"
         classes="transition-fade secondary"
-      />
+      /> -->
     </div>
   </LandingLogo>
   <!--Erst 99 Tage vor Saisonstart
