--- a/src/pages/neues/[...page].astro
+++ b/src/pages/neues/[...page].astro
@@ -8,7 +8,7 @@ import Grid from "../../components/Grid.astro";
 // utils imports
 import { formatBlogPosts } from "../../js/utils";
 
-import { CollectionEntry, getCollection } from 'astro:content';
+import { getCollection } from 'astro:content';
 
 
 export async function getStaticPaths({ paginate }) {
