fix no blog entries

--- a/src/pages/neues/[...page].astro
+++ b/src/pages/neues/[...page].astro
@@ -31,7 +31,7 @@ const { page } = Astro.props;
 					titel={post.data.title}
 					pubDate={post.data.pubDate}
 					description={post.data.description}
-					href={`/neues/${post.slug}/`}
+					href={`/neues/${post.id}/`}
 				/>
 			))
 		}
