--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,10 @@ import Countdown from "components/Countdown.astro";
       /> -->
     </div>
   </LandingLogo>
-  <!--Erst 99 Tage vor Saisonstart
+  <!--Erst 99 Tage vor Saisonstart-->
    <Countdown title="Saisonstart" date="2025-05-30T10:00:00" bg_color="secondary"> 
     Die Saison startet am 30. Mai 2025.
-  </Countdown>-->
+  </Countdown>
 
   <Accordion />
   <OSM className="full-width" />
